# networktools

./: .gitignore  CMakeLists.txt  README.md  main.c
GUI/: handlers.c  handlers.h  widgets.c  widgets.h  windowsetup.c  windowsetup.h
GUI/glade/: glade_gui.glade  glade_gui.glade~  style.css
REQUESTS/: requests.c  requests.h
